# arvel-workflow

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml  release.yml  security.yml
docs/: concepts.md  configuration.md  getting-started.md  testing.md
example/: acceptance.py  pyproject.toml
example/app/activities/: greet.py
example/app/workflows/: greet.py
example/bootstrap/: app.py
example/config/: workflow.py
src/arvel_workflow/: __init__.py  autoload.py  commands.py  decorators.py  facade.py  provider.py  registry.py  resource.py  settings.py  worker.py
tests/: test_phase0.py
