[project]
name = "arvel-workflow"
version = "0.1.0"
description = "Durable execution for arvel — Temporal-native, framework-ergonomic."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = ["arvel", "msgspec"]

[project.optional-dependencies]
temporal = ["temporalio>=1.7"]     # the engine — heavy, behind an extra (anti-corruption)

[project.entry-points."arvel.providers"]
workflow = "arvel_workflow.provider:WorkflowServiceProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arvel_workflow"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff", "mypy"]
